--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="registration_successful">Registraion successful!</string>
     <string name="login_successful">Login Successful!</string>
     <string name="request_canceled">Request canceled</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
