--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="permission_required_toast">Location is required</string>
     <string name="permission_rationale_location">Permission rationale location</string>
 
+    <string name="base_url">https://maps.googleapis.com</string>
+
 </resources>
