--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
 
     <string name="base_url">https://maps.googleapis.com</string>
 
+    <string name="api_key">AIzaSyDx3gjUGwn7019wfxISfbvE_LhsJKaoA1k</string>
+
+
 </resources>
